<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/select_skin_fragment_bg" />

    <TextView
        android:id="@+id/imageview_skin_select_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:background="@color/pink_color_1"
        android:gravity="center"
        android:text="@string/skin_select_instruction"
        android:textColor="@color/black_color_3"
        android:textSize="@dimen/text_size_big_4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageview_skin_select_bottom_bar"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/imageview_melayu_character" >

                <com.markswoman.eyestalk.model.uiobject.PinkButton
                    android:id="@+id/button_melayu_in_skin_select"
                    style="@style/Pink_Small_Button"
                    android:layout_centerInParent="true"
                    android:text="@string/melayu" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imageview_melayu_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description"
                android:src="@drawable/melayu" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/imageview_western_character" >

                <com.markswoman.eyestalk.model.uiobject.PinkButton
                    android:id="@+id/button_western_in_skin_select"
                    style="@style/Pink_Small_Button"
                    android:layout_centerInParent="true"
                    android:text="@string/western" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imageview_western_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description"
                android:src="@drawable/western" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/imageview_asia_character" >

                <com.markswoman.eyestalk.model.uiobject.PinkButton
                    android:id="@+id/button_asia_in_skin_select"
                    style="@style/Pink_Small_Button"
                    android:layout_centerInParent="true"
                    android:text="@string/asia" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imageview_asia_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description"
                android:src="@drawable/asia" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>